--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,8 @@
-<%= link_to 'Sign in', new_user_session_path, class: "nav-link "%>
+<% if user_signed_in? %>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+  <%= link_to 'Edit Profile', edit_user_registration_path %>
+  <!--  <p>Account: <%#= current_user.first_name %></p>-->
+<% else %>
+  <%= link_to "Log in", new_user_session_path %>
+<% end %>
+
