--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <% if user_signed_in? %>
   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   <%= link_to 'Edit Profile', edit_user_registration_path %>
-  <!--  <p>Account: <%#= current_user.first_name %></p>-->
+    <p>Account: <%= current_user.first_name %></p>
+  <% if current_user.avatar.present? %>
+    <%= image_tag current_user.avatar, height: '32', width: '32'%>
+  <% end %>
 <% else %>
   <%= link_to "Log in", new_user_session_path %>
 <% end %>
